_sass/components/_splash.scss
#splashText {
  /* Rotate the text by 20 degrees */
  transform: rotate(-24deg);
  /* Add a pulsating animation */
  animation: pulse 1s infinite;
  /* Center the text */
  text-align: right;
  /* Remove the underline */
  text-decoration: none;
  color: yellow;
  position: relative;
  top: 380px;
  right: -19px;
  font-size: 20px;

/* Media query to hide the splash message on mobile devices */
@media (max-width: 768px) {
  #splashText {
    display: none;
  }
}

}

@keyframes pulse {
  0% { opacity: 1; }
  50% { opacity: 0.5; }
  100% { opacity: 1; }
}

header.major > #splashText::after {
    display: none;
}

